traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:6: error: not found: value x
def a(){x=getDirection();setDirection(Direction.EAST);if(estFaceMur()){gauche();if (estFaceMur()){setDirection(x);return true}};else {setDirection(x);return false}} 
        ^Snake:6: error: not found: value x
def a(){x=getDirection();setDirection(Direction.EAST);if(estFaceMur()){gauche();if (estFaceMur()){setDirection(x);return true}};else {setDirection(x);return false}} 
                                                                                                               ^Snake:6: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
def a(){x=getDirection();setDirection(Direction.EAST);if(estFaceMur()){gauche();if (estFaceMur()){setDirection(x);return true}};else {setDirection(x);return false}} 
                                                                                                                         ^Snake:6: warning: enclosing method a has result type Unit: return value discarded
def a(){x=getDirection();setDirection(Direction.EAST);if(estFaceMur()){gauche();if (estFaceMur()){setDirection(x);return true}};else {setDirection(x);return false}} 
                                                                                                                  ^Snake:6: error: not found: value x
def a(){x=getDirection();setDirection(Direction.EAST);if(estFaceMur()){gauche();if (estFaceMur()){setDirection(x);return true}};else {setDirection(x);return false}} 
                                                                                                                                                   ^Snake:6: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
def a(){x=getDirection();setDirection(Direction.EAST);if(estFaceMur()){gauche();if (estFaceMur()){setDirection(x);return true}};else {setDirection(x);return false}} 
                                                                                                                                                             ^Snake:6: warning: enclosing method a has result type Unit: return value discarded
def a(){x=getDirection();setDirection(Direction.EAST);if(estFaceMur()){gauche();if (estFaceMur()){setDirection(x);return true}};else {setDirection(x);return false}} 
                                                                                                                                                      ^